<chore>: requirements.txt remove ver. for colab running case

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-aiofiles==0.8.0
-aiohttp==3.8.1
-datasets==1.18.3
-numpy==1.21.6
-pandas==1.4.2
-rank_bm25==0.2.2
-setuptools==60.9.3
-torch==1.11.0
-tqdm==4.64.0
-transformers==4.17.0
-wget==3.2
+aiofiles
+aiohttp
+datasets
+numpy
+pandas
+rank_bm25
+setuptools
+torch
+tqdm
+transformers
+wget
